major fixes for student and teach question exam and grading